src/test/ui/consts/const-match-check.eval2.stderr
error[E0005]: refutable pattern in local binding: `i32::MIN..=-1_i32` and `1_i32..=i32::MAX` not covered
  --> $DIR/const-match-check.rs:31:24
   |
LL |     let x: [i32; { let 0 = 0; 0 }] = [];
   |                        ^ patterns `i32::MIN..=-1_i32` and `1_i32..=i32::MAX` not covered
   |
   = note: `let` bindings require an "irrefutable pattern", like a `struct` or an `enum` with only one variant
   = note: for more information, visit https://doc.rust-lang.org/book/ch18-02-refutability.html
   = note: the matched value is of type `i32`
help: you might want to use `if let` to ignore the variant that isn't matched
   |
LL |     let x: [i32; { if let 0 = 0 { /* */ } 0 }] = [];
   |                    ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0005`.
